# helix

backend/: .env  docker-compose.yml
backend/auth/: .env  Cargo.toml  Dockerfile.dev
backend/auth/src/: main.rs
backend/auth/src/app_config/: config.rs  mod.rs  server.rs
