[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
actix-web = "4.13.0"
argon2 = "0.5.3"
chrono = "0.4.45"
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.32"
garde = { version = "0.23.0", features = ["full"] }
lettre = { version = "0.11.22", features = ["builder", "smtp-transport", "tokio1-native-tls"] }
once_cell = "1.21.4"
rand = "0.10.1"
redis = { version = "1.2.2", features = ["connection-manager", "tokio-comp"] }
regex = "1.12.4"
serde = "1.0.228"
tera = "1.20.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.22.0", features = ["v4","v7"] }
